Thu 30 May 11:42:29 BST 2013  Colin Watson  <cjwatson@debian.org>

	Upgrade to Automake 1.13.2 and Gnulib 20130529.

	* .bzrignore: Add gnulib/lib/locale.h, man/**/*.log, man/**/*.trs,
	  src/tests/*.log, and src/tests/*.trs.
	* autogen.sh: Drop gnulib/gets.patch backport.
	* gnulib/gets.patch: Remove.
	* configure.ac (AM_INIT_AUTOMAKE): Set minimum Automake version to
	  1.11.  Add parallel-tests option for compatibility with 1.11.
	* man/Rules.man (TESTS_ENVIRONMENT): Move to ...
	  (LOG_COMPILER): ... this.
	* src/tests/Makefile.am (TESTS_ENVIRONMENT): Rewrite as a list of
	  variable exports rather than as a command prefix, for
	  compatibility with parallel-tests.

Tue May 14 22:55:09 BST 2013  Colin Watson  <cjwatson@debian.org>

	* src/lexgrog.l: Define YY_NO_INPUT, suppressing a -Wunused-function
	  warning from GCC.
	* src/zsoelim.l: Likewise.

Tue May  7 15:27:28 BST 2013  Colin Watson  <cjwatson@debian.org>

	* src/man.c (escape_less): Revert handling of incompatible option
	  string escaping in less 456.  That change was reverted upstream in
	  less 457.

Sun Mar  3 14:22:32 GMT 2013  Felipe Castro  <fefcas@gmail.com>

	* po/eo.po: New from Translation Project.
	* po/LINGUAS: Add eo.
	* man/THANKS: Add translator credit.

Sun Mar  3 14:19:38 GMT 2013  Robert Luberda  <robert@debian.org>

	* po/pl.po: Update from Translation Project.
	* man/po4a/po/pl.po: Likewise.

Tue Jan 29 13:15:26 GMT 2013  Will  <cwr@netcom.co.uk>

	* src/manp.c (add_to_dirlist): Increase key length to handle buried
	  binutils manual page paths.

Mon Jan 21 11:20:48 GMT 2013  Colin Watson  <cjwatson@debian.org>

	* configure.ac (AC_HEADER_SYS_WAIT): Remove; no longer used.

Mon Jan 21 11:04:44 GMT 2013  Colin Watson  <cjwatson@debian.org>

	Upgrade to Libtool 2.4.2-1.2 (from Debian).

Sat Dec 22 13:59:14 GMT 2012  Colin Watson  <cjwatson@debian.org>

	Document default section list in manual pages (Debian bug #611007).

	* man/replace.sin.in: Substitute %sections%.