@@ -1,3 +1,7 @@
+Thu May 30 11:51:54 BST 2013  Colin Watson  <cjwatson@debian.org>
+
+	* Makefile.am (EXTRA_DIST): Remove gnulib/gets.patch.
+
 Thu 30 May 11:42:29 BST 2013  Colin Watson  <cjwatson@debian.org>
 
 	Upgrade to Automake 1.13.2 and Gnulib 20130529.
